--- a/templates/Static/Source/index.html
+++ b/templates/Static/Source/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en-US"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en-US"> <!--<![endif]-->
     <head>
       @@include("./modules/head.html", { "rtl" : false })
     </head>
     <body>
+      @@include("./modules/browserupgrade.html", {})
       @@include("./modules/navbar.html", { })
 
       @@include("./modules/carousel.html", { })
